[package]
name = "easy-parallel"
version = "2.0.0"
authors = ["Stjepan Glavina <stjepang@gmail.com>"]
edition = "2018"
description = "Run closures in parallel"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/stjepang/easy-parallel"
homepage = "https://github.com/stjepang/easy-parallel"
documentation = "https://docs.rs/easy-parallel"
keywords = ["scope", "thread", "scoped", "spawn"]
categories = ["concurrency"]
readme = "README.md"
