[package]
name = "easy-parallel"
version = "3.1.0"
authors = ["Stjepan Glavina <stjepang@gmail.com>"]
edition = "2018"
description = "Run closures in parallel"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/smol-rs/easy-parallel"
homepage = "https://github.com/smol-rs/easy-parallel"
documentation = "https://docs.rs/easy-parallel"
keywords = ["scope", "thread", "scoped", "spawn"]
categories = ["concurrency"]
readme = "README.md"
